--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # Dependencies
 node_modules/
-venv/
-__pycache__/
-*.pyc
+vendor/
+
+# Build
+dist/
+build/
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+backend/solmeme-trader
 
 # Environment
 .env
@@ -10,34 +18,48 @@ __pycache__/
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Build
-/build
-/dist
-*.egg-info/
+*.env
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+*~
 
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*.log
 
 # Testing
-/coverage
-.pytest_cache/
+coverage/
+.nyc_output/
 
-# Production
-/build
-
-# Misc
+# OS
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
+
+# Go specific
+*.test
+*.out
+go.work
+
+# Frontend specific
+.next/
+.nuxt/
+.cache/
+public/
+
+# ML service specific
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.env/
+.venv/
